[package]
name = "volts-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.1.1", features = ["postgres", "deadpool"] }
async-session = "3.0.0"
headers = "0.3"
axum = { version = "0.6.0-rc.2", features = ["headers"] }
reqwest = { version = "0.11.12", features = ["json"] }
oauth2 = "4.2.3"
anyhow = "1.0.66"
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
dotenvy = "0.15.6"
