[package]
name = "volts-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1.0.14"
rust-s3 = { version = "0.32.3", features = ["with-tokio"] }
tempfile = "3.3.0"
tar = "0.4.38"
sha2 = "0.10.6"
rand = "0.8.5"
chrono = "0.4.22"
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.1.1", features = ["postgres", "deadpool"] }
async-session = "3.0.0"
headers = "0.3"
axum = { version = "0.6.0-rc.2", features = ["headers"] }
reqwest = { version = "0.11.12", features = ["json"] }
oauth2 = "4.2.3"
anyhow = "1.0.66"
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio = { version = "1.21.2", features = ["full"] }
dotenvy = "0.15.6"
volts-core = { path = "../volts-core" }
toml_edit = { version = "0.14.4", features = ["easy"] }
lapce-rpc = "0.2.1"
zstd = { version = "0.11" }