[package]
name = "volts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
lapce-rpc = { git = "https://github.com/lapce/lapce" }
tempfile = "3.3.0"
flate2 = "1.0.24"
tar = "0.4.38"
toml_edit = { version = "0.14.4", features = ["easy"] }
serde = { version = "1.0", features = ["derive"] }
