[package]
name = "volts"
description = "Cli tool for publishing and managing Lapce plugins"
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
lapce-rpc = "0.2.1"
tempfile = "3.3.0"
tar = "0.4.38"
toml_edit = { version = "0.14.4", features = ["easy"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
keyring = { version = "1.2.0" }
zstd = "0.11"