[package]
name = "volts-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
anyhow = "1.0.66"
url = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
