[package]
name = "volts-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.2"
url = "2.3.1"
gloo-net = "0.2.4"
web-sys = { version = "0.3.60", features = ["HtmlImageElement"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
gloo-timers = { version = "0.2.3", features = ["futures"] }
console_error_panic_hook = "0.1.7"
sycamore-router = "0.8.0"
sycamore = { version = "0.8.2", features = ["suspense"] }
volts-core = { path = "../volts-core" }

[lib]
crate-type = ["cdylib", "rlib"]
